--- a/frontend/src/app/module/cfrecord-query/component/cfrecord-detail/cfrecord-detail.component.html
+++ b/frontend/src/app/module/cfrecord-query/component/cfrecord-detail/cfrecord-detail.component.html
@@ -1,4 +1,4 @@
-<form nz-form nzLayout="vertical" [ngSwitch]="cfRecordVO.inExType" style="padding-bottom:60px;">
+<form nz-form nzLayout="vertical" [ngSwitch]="cfRecordVO.inExType" style="padding:0px 10px 60px 10px;">
     <div nz-row>
         <div nz-col nzSpan="12" class="big-money">{{cfRecordVO.localMoney | number:'1.2-2'}}</div>
     </div>
